<resources>
    <string name="app_name">Secure My Passwords</string>
    <string name="hello_world">Hello World</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="error">Error ! </string>
    <string name="title">Title</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_password_list">SecureMyPasswords</string>
    <string name="welcome_back">Welcome back</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_entry">New Entry</string>
    <string name="new_group">New Group</string>

    <string name="enter_password">Please enter the master password</string>

    <!-- Activates -->
    <!-- SetupActivity -->
    <string name="tooSmall_password">tooSmall</string>
    <string name="easy_password">easy</string>
    <string name="medium_password">medium</string>
    <string name="strong_password">strong</string>
    <string name="strongest_password">strongest</string>
    <string name="setup_master_password">Welcome\nKeep your password safe with one\nmaster protection\nPlease setup your password</string>


    <!-- PictureDescription -->
    <string name="cadena">cadena</string>

    <!-- appBar -->
    <string name="account">Account</string>
    <string name="password_generator">Password Generator</string>
    <string name="close">Close</string>

    <!-- ManagePassword -->
    <string name="managePasswordURL">URL :</string>
    <string name="managePasswordName">Name :</string>
    <string name="managePasswordPassword">Password :</string>
    <string name="managePasswordNotes">Notes :</string>
    <string name="title_activity_group_manage">GroupManage</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="change_password">Update master key</string>

</resources>
