<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/account"
            android:enabled="false"/>
        <item
            android:id="@+id/nav_updateMasterKey"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_passGenerator"
            android:icon="@drawable/ic_shield"
            android:title="@string/password_generator"
            android:enabled="false"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings"
            android:enabled="false"/>m
    </group>

</menu>
